Inserimento della gabbia di massima della registrazione

--- a/docs/src/images/gabbie-di-massima.tex
+++ b/docs/src/images/gabbie-di-massima.tex
@@ -11,6 +11,13 @@
 	\label{fig:gabbie-massima:login}
 	\includegraphics[width=\textwidth]{images/gabbie-di-massima/Login}
 \end{figure}
+\begin{figure}[H]
+	\centering
+
+	\caption{Gabbia di occupazione di massima della pagina di registrazione.}
+	\label{fig:gabbie-massima:registrazione}
+	\includegraphics[width=\textwidth]{images/gabbie-di-massima/Registrazione}
+\end{figure}
 
 \begin{figure}[H]
 	\centering
