Creazione parte di base

--- a/docs/src/parts/documento_piano_qualita/_content.tex
+++ b/docs/src/parts/documento_piano_qualita/_content.tex
@@ -6,16 +6,11 @@
 % A copy of the license is included in the section entitled "GNU
 % Free Documentation License".
 
-\mainmatter
-\pagestyle{fancy}
+\chapter{Piano di qualità}\label{chap:piano-qualita}
 
-\input{parts/documento_requisiti/documento_requisiti.tex}
+\section{Analisi dei rischi}\label{sec:analisi-rischi}
 
-\input{parts/documento_piano_qualita/documento_piano_qualita.tex}
+\section{Piano del progetto}\label{sec:piano-progetto}
 
-\backmatter
-\printbibliography[heading=bibintoc]
-\appendix
-\part*{Appendice}\label{part:appendice}
-\addcontentsline{toc}{part}{Appendice}
-\input{includes/license.tex}
+\section{Organizzazione del gruppo}\label{sec:organizzazione-gruppo}
+
