--- a/docs/src/parts/documento_piano_qualita/documento_piano_qualita.tex
+++ b/docs/src/parts/documento_piano_qualita/documento_piano_qualita.tex
@@ -6,16 +6,6 @@
 % A copy of the license is included in the section entitled "GNU
 % Free Documentation License".
 
-\mainmatter
-\pagestyle{fancy}
+\part{Documento del piano di qualità}\label{part:documento-piano-qualita}
 
-\input{parts/documento_requisiti/documento_requisiti.tex}
-
-\input{parts/documento_piano_qualita/documento_piano_qualita.tex}
-
-\backmatter
-\printbibliography[heading=bibintoc]
-\appendix
-\part*{Appendice}\label{part:appendice}
-\addcontentsline{toc}{part}{Appendice}
-\input{includes/license.tex}
+\input{parts/documento_piano_qualita/_content.tex}
