Stesura piano qualità (WIP)

--- a/docs/src/parts/documento_piano_qualita/_content.tex
+++ b/docs/src/parts/documento_piano_qualita/_content.tex
@@ -9,8 +9,28 @@
 \chapter{Piano di qualità}\label{chap:piano-qualita}
 
 \section{Analisi dei rischi}\label{sec:analisi-rischi}
+%TODO GDPR
 
 \section{Piano del progetto}\label{sec:piano-progetto}
+%TODO Gantt diagram
 
 \section{Organizzazione del gruppo}\label{sec:organizzazione-gruppo}
+Il gruppo, dopo essersi riunito in un brainsorming iniziale, ha deciso di 
+dividersi in maniera modulare assegnando ad ogni componente un compito 
+specifico.
+
+In ogni fase, tutti i componenti del gruppo si riuniscono per una 
+pianificazione iniziale e, alla fine di essa, si occupano  di verificare e 
+convalidare il lavoro svolto.
+
+Di seguito viene riportata la suddivisione dei compiti:
+
+\begin{itemize}
+	\item Fase 1
+	\item Fase 2
+	\item Fase 3
+	\item Fase 4
+	\item Fase 5
+	\item Fase 6
+\end{itemize}
 
