Inserito il diagramma di gantt

--- a/docs/src/Emotionally.tex
+++ b/docs/src/Emotionally.tex
@@ -17,6 +17,8 @@
 \usepackage{tikz-uml}
 \usepackage{float}
 \usepackage{multirow}
+\usepackage{graphicx}
+\usepackage[export]{adjustbox}
 \tikzumlset{fill class=none, fill usecase=emotionally-color!35}
 
 \input{includes/acronyms.tex}
