--- a/docs/src/parts/documento_piano_qualita/_content.tex
+++ b/docs/src/parts/documento_piano_qualita/_content.tex
@@ -9,10 +9,13 @@
 \chapter{Piano di qualità}\label{chap:piano-qualita}
 
 \section{Analisi dei rischi}\label{sec:analisi-rischi}
-%TODO GDPR
+L'analisi dei rischi si è incentrata sulla stesura di un documento di 
+\textit{Privacy Policy} che riguarda il trattamento dei dati inseriti 
+dall'utente, la loro conservazione e l'impegno del gruppo di offrire gli 
+standard di sicurezza più elevati. 
 
 \section{Piano del progetto}\label{sec:piano-progetto}
-%TODO Gantt diagram
+\includegraphics[height=11.5cm, frame]{images/gantt.png}
 
 \section{Organizzazione del gruppo}\label{sec:organizzazione-gruppo}
 Il gruppo, dopo essersi riunito in un brainsorming iniziale, ha deciso di 
