--- a/docs/src/parts/documento_piano_qualita/_content.tex
+++ b/docs/src/parts/documento_piano_qualita/_content.tex
@@ -14,6 +14,10 @@ L'analisi dei rischi si è incentrata sulla stesura di un documento di
 dall'utente, la loro conservazione e l'impegno del gruppo di offrire gli 
 standard di sicurezza più elevati. 
 
+Il suddetto documento è consultabile tramite la 
+\href{https://f-s-c.github.io/emotionally_policy/privacy_policy.html}{Privacy 
+Policy}.
+
 \section{Piano del progetto}\label{sec:piano-progetto}
 \includegraphics[height=11.5cm, frame]{images/gantt.png}
 
