--- a/docs/src/parts/documento_piano_qualita/_content.tex
+++ b/docs/src/parts/documento_piano_qualita/_content.tex
@@ -16,7 +16,7 @@ standard di sicurezza più elevati.
 
 Il suddetto documento è consultabile tramite il seguente link alla 
 \href{https://f-s-c.github.io/emotionally_policy/privacy_policy.html}{Privacy 
-Policy} \url{https://f-s-c.github.io/emotionally_policy/privacy_policy.html}.
+Policy} (\url{https://f-s-c.github.io/emotionally_policy/privacy_policy.html}).
 
 \section{Piano del progetto}\label{sec:piano-progetto}
 \includegraphics[height=11.5cm, frame]{images/gantt.png}
