Update documentation (WIP)

--- a/docs/src/images/gabbie-di-massima.tex
+++ b/docs/src/images/gabbie-di-massima.tex
@@ -47,3 +47,11 @@
 	\label{fig:gabbie-massima:video}
 	\includegraphics[width=\textwidth]{images/gabbie-di-massima/Video}
 \end{figure}
+
+\begin{figure}[H]
+	\centering
+	\caption{Gabbia di occupazione di massima della pagina di profilo.}
+	\label{fig:gabbie-massima:profilo}
+	\includegraphics[width=\textwidth]{images/gabbie-di-massima/Profilo}
+\end{figure}
+
