--- a/docs/src/parts/documento_progettazione/_visual_design.tex
+++ b/docs/src/parts/documento_progettazione/_visual_design.tex
@@ -6,18 +6,8 @@
 % A copy of the license is included in the section entitled "GNU
 % Free Documentation License".
 
-\mainmatter
-\pagestyle{fancy}
+\chapter{Visual Design}\label{chap:visual-design}
 
-\input{parts/documento_requisiti/documento_requisiti.tex}
 
-\input{parts/documento_piano_qualita/documento_piano_qualita.tex}
+\section{Layout grafici}\label{sec:layout-grafici}
 
-\input{parts/documento-progettazione/documento_progettazione.tex}
-
-\backmatter
-\printbibliography[heading=bibintoc]
-\appendix
-\part*{Appendice}\label{part:appendice}
-\addcontentsline{toc}{part}{Appendice}
-\input{includes/license.tex}
