--- a/docs/src/parts/documento_progettazione/documento_progettazione.tex
+++ b/docs/src/parts/documento_progettazione/documento_progettazione.tex
@@ -6,18 +6,12 @@
 % A copy of the license is included in the section entitled "GNU
 % Free Documentation License".
 
-\mainmatter
-\pagestyle{fancy}
+\part{Documento di progettazione}\label{part:documento-progettazione}
 
-\input{parts/documento_requisiti/documento_requisiti.tex}
+\input{parts/documento_progettazione/_web_design.tex}
 
-\input{parts/documento_piano_qualita/documento_piano_qualita.tex}
+\input{parts/documento_progettazione/_visual_design.tex}
 
-\input{parts/documento-progettazione/documento_progettazione.tex}
+\input{parts/documento_progettazione/_sviluppo_sito.tex}
 
-\backmatter
-\printbibliography[heading=bibintoc]
-\appendix
-\part*{Appendice}\label{part:appendice}
-\addcontentsline{toc}{part}{Appendice}
-\input{includes/license.tex}
+\input{parts/documento_progettazione/_test.tex}
