Update documentation (WIP)

--- a/docs/src/images/gabbie-di-massima.tex
+++ b/docs/src/images/gabbie-di-massima.tex
@@ -55,3 +55,9 @@
 	\includegraphics[width=\textwidth]{images/gabbie-di-massima/Profilo}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	\caption{Gabbia di occupazione di massima della pagina del report.}
+	\label{fig:gabbie-massima:report}
+	\includegraphics[width=\textwidth]{images/gabbie-di-massima/Report}
+\end{figure}
