--- a/docs/src/parts/documento_progettazione/_visual_design.tex
+++ b/docs/src/parts/documento_progettazione/_visual_design.tex
@@ -10,4 +10,7 @@
 
 
 \section{Layout grafici}\label{sec:layout-grafici}
+Per visionare i layout grafici del sistema si è scelto di riportare di seguito 
+i prototipi di comunicazione realizzati con AdobeXD.
 
+\input{images/prototipo-comunicazione.tex}
