--- a/docs/src/parts/documento_progettazione/_web_design.tex
+++ b/docs/src/parts/documento_progettazione/_web_design.tex
@@ -15,19 +15,18 @@ storyboad delle pagine e i relativi prototipi di navigazione.
 \section{Mappa del sito}\label{sec:mappa-sito}
 La seguente mappa è la rappresentazione dei percorsi di navigazione del sito in 
 un contesto generale.
+
 \includegraphics{images/mappa-sito.png}
 
 \section{Storyboard}\label{sec:storyboard}
 Gli storyboard sono la rappresentazione di particolari sequenze di navigazione 
 del sito, accompagnata da una sintetica descrizione.
 
-\section{Gabbie logiche}\label{sec:gabbie-logiche}
-Le gabbie logiche mostrano soltanto menu, spazi e ingombri di massima di 
-ciascuna pagina, senza fornire alcuna indicazione precisa sulla grafica.
+\input{images/storyboard.tex}
 
 \section{Prototipo di navigazione}\label{sec:prototipo-navigazione}
 È un prototipo piuttosto rudimentale completamente navigabile. Le pagine sono 
-costituite dalla sola gabbia logica, in bianco e nere, senza grafica, senza 
+costituite dalla sola gabbia logica, in bianco e nero, senza grafica, senza 
 contenuti informativi e il <<testo fittizio>> inserito nella gabbia logica.
 
-
+\input{images/gabbia-logica.tex}
