Update documentation (WIP)

--- a/docs/src/images/prototipo-comunicazione.tex
+++ b/docs/src/images/prototipo-comunicazione.tex
@@ -17,14 +17,14 @@
 	\centering
 	\caption{Prototipo di comunicazione: pagina di login (1).}
 	\label{fig:prototipo-comunicazione:login-1}
-	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/login (1).png}
+	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/login-1.png}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\caption{Prototipo di comunicazione: pagina di login (2).}
 	\label{fig:prototipo-comunicazione:login-2}
-	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/login (2).png}
+	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/login-2.png}
 \end{figure}
 
 \begin{figure}[H]
@@ -38,7 +38,7 @@
 	\centering
 	\caption{Prototipo di comunicazione: pagina home.}
 	\label{fig:prototipo-comunicazione:home}
-	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/home (no scroll).png}
+	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/home-no-scroll.png}
 \end{figure}
 
 \begin{figure}[H]
@@ -59,12 +59,12 @@
 	\centering
 	\caption{Prototipo di comunicazione: pagina di report di un video.}
 	\label{fig:prototipo-comunicazione:video-report}
-	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/report video.png}
+	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/report-video.png}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\caption{Prototipo di comunicazione: pagina di report di un progetto/sottoprogetto.}
 	\label{fig:prototipo-comunicazione:project-report}
-	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/report project.png}
+	\includegraphics[width=\textwidth]{images/prototipo-comunicazione/report-project.png}
 \end{figure}
