Update documentation (WIP)

--- a/docs/src/parts/documento_progettazione/_sviluppo_sito.tex
+++ b/docs/src/parts/documento_progettazione/_sviluppo_sito.tex
@@ -12,30 +12,18 @@ scenari di esecuzione di tutti i casi d'uso introdotti nalla fase dei
 requisiti. Si sono costruiti dei diagrammi di navigazione attraverso i 
 diagrammi per macchine a stati. 
 
-\begin{itemize}
-	\item \textbf{(ID-1) Registration}:
-	\item \textbf{(ID-2) Test analysis}:
-	\item \textbf{(ID-3) Login}:
-	\item \textbf{(ID-4) Logout}:
-	\item \textbf{(ID-5) Create project}:
-	\item \textbf{(ID-6) View project}:
-	\item \textbf{(ID-7) Edit project}:
-	\item \textbf{(ID-8) Remove project}:
-	\item \textbf{(ID-9) Updload video}:
-	\item \textbf{(ID-10) Edit video}:
-	\item \textbf{(ID-11) Remove video}:
-	\item \textbf{(ID-12) View video}:
-	\item \textbf{(ID-13) Share project}:
-	\item \textbf{(ID-14) Delete account}:
-	\item \textbf{(ID-15) Update user data}:
-	\item \textbf{(ID-16) View report}:
-	\item \textbf{(ID-17) Download report}:
-	
-\end{itemize}
+\input{images/diagrammi-macchine-stati.tex}
 
 \section{Struttura dei form}\label{sec:struttura-form}
 
+\input{images/struttura-form.tex}
+
 \section{Modello logico base di dati}\label{sec:modello-logico}
 
-
+\begin{figure}[H]
+	\centering
+	\caption{Modello logico della base di dati del sistema.}
+	\label{fig:logical-diagram}
+	\includegraphics[width=\textwidth]{images/logical-diagram}
+\end{figure}
 
