Update documentation (WIP)

--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -38,6 +38,13 @@ dell'oggetto a cui è affiancato}):
 			\end{itemize}
 		\item \textbf{Video (*)}
 		\end{itemize}
+	\item \textbf{Lingua}
+	\begin{itemize}
+		\item \textbf{Italiano}
+		\item \textbf{Inglese}
+	\end{itemize}
+\item \textbf{Profilo}
+\item \textbf{Logout}
 	\end{itemize}
 \end{itemize}
 Indicativamente, la struttura di navigazione delle pagine più importante è 
@@ -127,9 +134,6 @@ sensibili quali email, password, nome, cognome e sesso.
 		contenuto}} & {\textbf{Dove trovare le informazioni}} 
 		\\\hline
 		\endfirsthead
-		\cellcolor{white!0}  & Try me & Questa sezione ha lo scopo di far 
-		effettuare un'analisi delle emozioni di prova agli utenti visitatori 
-		della piattaforma web. & Non sono previste informazioni. \\
 		\cellcolor{white!0}  & Funzionalità & Questa sezione ha lo scopo di 
 		presentare 
 		le funzionalità offerte da Emotionally attraverso una breve descrizione 
@@ -200,3 +204,6 @@ file, il team garantisce (fatta eccezione per problemi legati alla
 connettività) un alto tasso di successo (qualora le informazioni fornite 
 rispettino i vincoli imposti dal team). L'errato inserimento di un dato sarà 
 notificato all'utente mediante un messaggio di errore facilmente comprensibile.
+
+Per poter usufruire di tutte le funzionalità offerte da Emotionally e in modo 
+che siano correttamente funzionanti è consigliato l'uso del browser FireFox.
