--- a/docs/src/parts/documento_progettazione/documento_progettazione.tex
+++ b/docs/src/parts/documento_progettazione/documento_progettazione.tex
@@ -14,4 +14,4 @@
 
 \input{parts/documento_progettazione/_sviluppo_sito.tex}
 
-% \input{parts/documento_progettazione/_test.tex}
+\input{parts/documento_progettazione/_test.tex}
