Correzioni di errori (documentazione)
Correzione di errori che non permettevano la compilazione della documentazione

--- a/docs/src/parts/documento_progettazione/_test.tex
+++ b/docs/src/parts/documento_progettazione/_test.tex
@@ -85,7 +85,8 @@ Gravità:
 		\item problema bloccante, impedisce l'uso della funzione
 	\end{enumerate}
 
-\paragraph{Note} Il problema \textbf{#1} è dovuto a un bug presente nel browser 
+\paragraph{Note} Il problema \textbf{\#1} è dovuto a un bug presente nel 
+browser 
 Google Chrome che non da la possibilità di poter gestire video real time. Come 
 già riportato nei requisiti di usabilità, per il funzionamento corretto del 
 sistema, è consigliabile l'utilizzo di FireFox.
