--- a/docs/src/parts/documento_progettazione/_visual_design.tex
+++ b/docs/src/parts/documento_progettazione/_visual_design.tex
@@ -28,19 +28,19 @@ queste specifiche:
 	\begin{itemize}
 		\item Elevazioni:
 		\begin{itemize}
-			\item Elevazione 0dp: \textbf{#121212} 
-			\item Elevazione 1dp: \textbf{#1e1e1e}
-			\item Elevazione 2dp: \textbf{#232323}
-			\item Elevazione 3dp: \textbf{#252525}
-			\item Elevazione 4dp: \textbf{#272727}
-			\item Elevazione 6dp: \textbf{#2c2c2c}
-			\item Elevazione 8dp: \textbf{#2e2e2e}
-			\item Elevazione 12dp: \textbf{#333333}
-			\item Elevazione 16dp: \textbf{#363636}
-			\item Elevazione 24dp: \textbf{#383838}
+			\item Elevazione 0dp: \textbf{\#121212} 
+			\item Elevazione 1dp: \textbf{\#1e1e1e}
+			\item Elevazione 2dp: \textbf{\#232323}
+			\item Elevazione 3dp: \textbf{\#252525}
+			\item Elevazione 4dp: \textbf{\#272727}
+			\item Elevazione 6dp: \textbf{\#2c2c2c}
+			\item Elevazione 8dp: \textbf{\#2e2e2e}
+			\item Elevazione 12dp: \textbf{\#333333}
+			\item Elevazione 16dp: \textbf{\#363636}
+			\item Elevazione 24dp: \textbf{\#383838}
 		\end{itemize} 
-		\item Colore primario: \textbf{#FF9800}
-		\item Colore secondario: \textbf{#6c757d}
+		\item Colore primario: \textbf{\#FF9800}
+		\item Colore secondario: \textbf{\#6c757d}
 		\item Font: \textbf{Raleway} 
 	\end{itemize}
 \end{itemize}
